--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,7 @@ body {
   position: relative;
     
 }
-::-webkit-scrollbar {
-  background: transparent;
-  width: 1vh;
-  cursor: pointer;
-}
 
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(0deg,rgba(255, 0, 102, 0.616) 0%, rgba(255, 0, 102, 0.521) 20%,  rgba(255, 0, 102, 0.507) 40%, rgba(255, 0, 102, 0.747) 60%, rgba(255, 0, 102, 0.774) 80% );
-  border: none;
-  border-radius: 5vh;
-}
 body::after{
   position: fixed;
   content: "";
